# config-saver

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  __init__.py  __main__.py  dependencies  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config_saver/: __init__.py  __main__.py
config_saver/configs/default/: example.json  example.yaml
config_saver/lib/: cli.py  cli_manager.py
config_saver/lib/backup_mapager/: backup_manager.py  backup_state.py
config_saver/lib/cli/: cli.py
config_saver/lib/models/: model.py  specific_files_model.py
config_saver/lib/parser/: parser.py
config_saver/lib/tar_compressor/: tar_compressor.py  tar_decompressor.py
config_saver/lib/utils/: path_expander.py  test_path_expander.py
configs/: default-config.yaml  etc-files.yaml  wallpapers.yaml  zsh.yaml
configs/default/: config.yaml
contrib/systemd/system/: config-saver@.service  config-saver@.timer
contrib/systemd/user/: config-saver.service  config-saver.timer
lib/json_parser/: json_parser.py
lib/models/: json_model.py  model.py
lib/parser/: parser.py
lib/tar_compressor/: tar_compressor.py  tar_decompressor.py
